deploy/k8s/airflow/airflowingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: airflow-webserver-ingress
  namespace: airflow
  annotations:
    # If you're using cert-manager for automatic TLS
    cert-manager.io/cluster-issuer: letsencrypt-prod
    # Typical annotation to rewrite path (if needed)
    nginx.ingress.kubernetes.io/rewrite-target: "/"
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ${AFW_HOST_0}
      secretName: airflow-webserver-tls
  rules:
    - host: ${AFW_HOST_0}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: airflow-webserver  # the Service name
                port:
                  number: 8080          # the Service port
